--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1,1 +1,35 @@
-Hello World!
+<html>
+	<head>
+	    <meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="description" content="Spiderbot">
+	    <meta name="author" content="Julio Martínez Martínez-Checa" />
+	    <!-- <link rel="icon" href="../../favicon.ico"> --> 
+	    
+	    <title>Spiderbot</title>
+	    
+	    <!-- Bootstrap core CSS -->
+    	<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    	<link href="static/css/signin.css" rel="stylesheet">
+	    
+	</head>
+	<body>
+		<div class="container">
+	
+	      <form class="form-signin">
+	        <h2 class="form-signin-heading">Inicia sesión</h2>
+	        <label for="usuario" class="sr-only">Usuario</label>
+	        <input type="text" id="usuario" class="form-control" placeholder="Usuario" required autofocus>
+	        <label for="inputPassword" class="sr-only">Contraseña</label>
+	        <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+	        <div class="checkbox">
+	          <label>
+	            <input type="checkbox" value="remember-me"> Recordarme
+	          </label>
+	        </div>
+	        <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar sesión</button>
+	      </form>
+	
+	    </div> <!-- /container -->
+	</body>
+</html>
