--- a/src/template/login.html
+++ b/src/template/login.html
@@ -9,7 +9,7 @@
 	    <title>Spiderbot</title>
 	    
 	    <!-- Bootstrap core CSS -->
-    	<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    	<link href="static/css/bootstrap.min.css" rel="stylesheet">
     	<link href="static/css/signin.css" rel="stylesheet">
 	    
 	</head>
