Empezando a validar WCAG 2.0 #2

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -67,6 +67,9 @@
 	      	<input value="val_html" type="radio" name="optradio" checked>Validate HTML/XHTML/CSS
 		  </label>
 		  <label class="radio-inline">
+		  	<input value="val_wcag" type="radio" name="optradio">Validate WCAG 2.0
+		  </label>
+		  <label class="radio-inline">
 		  	<input value="check_availability" type="radio" name="optradio">Check availability
 		  </label>
 		</form>
