Funcionan las tareas asíncronasgit pull! #9

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -55,7 +55,7 @@
 
     </div><!-- /.container -->
     <div class="container" id="web_input_form">
-	    <form class="form-inline" role="form" method="post" action="/validation">
+	    <form class="form-inline" role="form" method="post" action="/qvalidation">
 		  <div class="form-group" id="input_bar">
 		    <label class="sr-only" for="url">Enter your web page</label>
 		    <input type="text" class="form-control" id="url" name="url"
