Añadida imagen logotipo

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -50,6 +50,7 @@
     <div class="container">
 
       <div class="starter-template">
+      	<img id="logo" src="static/images/logo.png" />
         <h1>Enter URL to diagnose</h1>
       </div>
 
