Arreglando mejoras al algoritmo de la araña web #6

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -73,6 +73,12 @@
 		  <label class="radio-inline">
 		  	<input value="check_availability" type="radio" name="optradio">Check availability
 		  </label>
+		  <br/><br/>
+		  <div class="form-group">
+		    <label class="sr-only" for="max_pags">Max pages (default: 50)</label>
+		    <input type="number" class="form-control" id="max_pags" name="max_pags" 
+		           placeholder="Max pages (default: 50)">
+		  </div>
 		</form>
 	</div>
 
