--- a/src/template/index.html
+++ b/src/template/index.html
@@ -75,6 +75,11 @@
 		  </label>
 		  <br/><br/>
 		  <div class="form-group">
+		    <label class="sr-only" for="depth">Depth level</label>
+		    <input type="number" class="form-control" id="depth" name="depth" 
+		           placeholder="Depth level (default: 1)">
+		  </div>
+		  <div class="form-group">
 		    <label class="sr-only" for="max_pags">Max pages (default: 50)</label>
 		    <input type="number" class="form-control" id="max_pags" name="max_pags" 
 		           placeholder="Max pages (default: 50)">
