--- a/src/template/report_view.html
+++ b/src/template/report_view.html
@@ -1,4 +1,3 @@
->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -34,11 +33,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Spiderbot</a>
+          <a class="navbar-brand" href="/">Spiderbot</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/reports">Reports</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -50,13 +50,29 @@
 
       <div class="starter-template">
       	<img id="logo" src="static/images/logo.png" />
-        <h1>Reports</h1>
+        <h1>{{report.web}}</h1>
       </div>
 
     </div><!-- /.container -->
     <div class="container" id="reports_container">
-		{{report}}
+		<p>Last validation executed by: {{report.user}}</p>
+		<p>Date: {{report.date}}</p>
+		<p>Saved at: {{report.time}}</p>
 	</div>
+	<table class="report_results_table">
+	<tr>
+		<th>URL</th>
+		<th>Result</th>
+		<th>Details</th>
+		</tr>
+	{% for result in report.results %}
+		<tr>
+			<td><a href="{{result.url}}">{{result.url}}</a></td>
+			<td>{{result.state}}</td>
+			<td><a href="#"><img id="analyze-img" src="static/images/analyze-data.png"/></a></td>
+		</tr>
+	{% endfor %}
+	</table>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
