--- a/src/template/reports.html
+++ b/src/template/reports.html
@@ -34,11 +34,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Spiderbot</a>
+          <a class="navbar-brand" href="/">Spiderbot</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/reports">Reports</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -56,7 +57,7 @@
     </div><!-- /.container -->
     <div class="container" id="reports_container">
     {% for report in reports %}
-    	<a href="viewreport?report_id={{report.web}}">
+    	<a href="viewreport?report_web={{report.web}}&report_validation_type={{report.validation_type}}">
 	    	<table class="report_table">
 				<caption align="bottom">{{report.web}}</caption>
 				<tr><td><img class="report_image" src="static/images/report.png"/></td></tr>
