--- a/src/template/reports.html
+++ b/src/template/reports.html
@@ -57,7 +57,7 @@
     </div><!-- /.container -->
     <div class="container" id="reports_container">
     {% for report in reports %}
-    	<a href="viewreport?web={{report.web}}&validation_type={{report.validation_type}}">
+    	<a href="viewreport?id={{report.key.id()}}">
 	    	<table class="report_table">
 				<caption align="bottom">{{report.web}}</caption>
 				<tr><td><img class="report_image" src="static/images/report.png"/></td></tr>
