Metiendo login de usuario

--- a/src/template/login.html
+++ b/src/template/login.html
@@ -17,11 +17,11 @@
 		<div class="container">
 	
 	      <form class="form-signin">
-	        <h2 class="form-signin-heading">Inicia sesión</h2>
-	        <label for="usuario" class="sr-only">Usuario</label>
-	        <input type="text" id="usuario" class="form-control" placeholder="Usuario" required autofocus>
-	        <label for="inputPassword" class="sr-only">Contraseña</label>
-	        <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
+	        <h2 class="form-signin-heading">Login</h2>
+	        <label for="user" class="sr-only">User</label>
+	        <input type="text" id="user" name="user" class="form-control" placeholder="User" required autofocus>
+	        <label for="password" class="sr-only">Password</label>
+	        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
 	        <div class="checkbox">
 	          <label>
 	            <input type="checkbox" value="remember-me"> Recordarme
