--- a/src/template/login.html
+++ b/src/template/login.html
@@ -16,18 +16,18 @@
 	<body>
 		<div class="container">
 	
-	      <form class="form-signin">
-	        <h2 class="form-signin-heading">Login</h2>
+	      <form class="form-signin" action="/login" method="post">
+	        <h2 class="form-signin-heading">Please sign in</h2>
 	        <label for="user" class="sr-only">User</label>
 	        <input type="text" id="user" name="user" class="form-control" placeholder="User" required autofocus>
 	        <label for="password" class="sr-only">Password</label>
 	        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
 	        <div class="checkbox">
 	          <label>
-	            <input type="checkbox" value="remember-me"> Recordarme
+	            <input type="checkbox" value="remember-me"> Remember me
 	          </label>
 	        </div>
-	        <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar sesión</button>
+	        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 	      </form>
 	
 	    </div> <!-- /container -->
