Ya se ven los detalles de los informes #5

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -66,13 +66,13 @@
 		  <button type="submit" class="btn btn-default">Go!</button>
 		  <br/><br/>
 		  <label class="radio-inline">
-	      	<input value="val_html" type="radio" name="optradio" checked>Validate HTML/XHTML/CSS
+	      	<input value="HTML" type="radio" name="optradio" checked>Validate HTML/XHTML/CSS
 		  </label>
 		  <label class="radio-inline">
-		  	<input value="val_wcag" type="radio" name="optradio">Validate WCAG 2.0
+		  	<input value="WCAG 2.0" type="radio" name="optradio">Validate WCAG 2.0
 		  </label>
 		  <label class="radio-inline">
-		  	<input value="check_availability" type="radio" name="optradio">Check availability
+		  	<input value="CHECK AVAILABILITY" type="radio" name="optradio">Check availability
 		  </label>
 		  <br/><br/>
 		  <div class="form-group">
