Últimos retoques por hoy

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -44,6 +44,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
+          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
         </div><!--/.nav-collapse -->
       </div>
     </nav>
@@ -68,9 +69,11 @@
 		  <label class="radio-inline">
 	      	<input value="HTML" type="radio" name="optradio" checked>Validate HTML/XHTML/CSS
 		  </label>
+		  <!--
 		  <label class="radio-inline">
 		  	<input value="WCAG 2.0" type="radio" name="optradio">Validate WCAG 2.0
 		  </label>
+		  -->
 		  <label class="radio-inline">
 		  	<input value="CHECK AVAILABILITY" type="radio" name="optradio">Check availability
 		  </label>
