--- a/src/template/reports.html
+++ b/src/template/reports.html
@@ -62,16 +62,27 @@
     <div class="container" id="reports_container">
     {% for report in reports %}
     	<div id=report">
-	    	<a href="viewreport?id={{report.key.id()}}">
-		    	<table class="report_table">
-					<caption align="bottom">
-						{{report.web}}
-						<br/>
-						Validation type: {{report.validation_type}}
-					</caption>
-					<tr><td><img class="report_image" src="static/images/report.png"/></td></tr>
-				</table>
-			</a>
+    		<table id="report_table">
+    			<td><a href="viewreport?id={{report.key.id()}}"><img class="report_image" src="static/images/report.png"/></a></td>
+    			<td>
+			    	<table id="report_subtable">
+			    		<tr>
+							<td>Web</td>
+							<td>{{report.web}}</td>
+						</tr>
+							<td>Validation type</td>
+							<td>{{report.validation_type}}</td>
+						<tr>
+							<td>Only Domain?</td>
+							<td>{% if report.onlyDomain %} Yes {% else %} No {% endif %}</td>
+						</tr>
+						<tr>
+							<td>Pages</td>
+							<td>{{report.pages}}</td>
+						</tr>
+					</table>
+				</td>
+			</table>
 		</div>
 	{% endfor %}
 	</div>
