--- a/src/template/index.html
+++ b/src/template/index.html
@@ -22,6 +22,34 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="static/js/jquery-1.9.1.js"></script>
+    <script>
+    
+    $(function (){
+    
+	    var progress;
+	    
+	    function callAjax() {
+	            $.ajax({
+	                type: 'GET',
+	                url: '/progress',
+	                data: $(this).serialize(),
+	                dataType: 'json',
+	                success: function (data) {
+	                	progress = data;
+	                }
+	            });
+	            console.log(progress);
+	            return progress;
+	   }
+	   
+	   $(document).ready(function(){
+	   		var pbar = document.getElementById('progress-bar');
+	    	pbar.setAttribute("style","width:".concat(callAjax()));
+	   });
+   });
+   </script>
+    
   </head>
 
   <body>
@@ -48,6 +76,14 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+    
+    <div class="progress progress-striped active">
+	  <div id="progress-bar" class="progress-bar" role="progressbar"
+	       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
+	       style="width: 45%">
+	    <span class="sr-only">45% completado</span>
+	  </div>
+	</div>
 
     <div class="container">
 
