--- a/src/template/index.html
+++ b/src/template/index.html
@@ -22,32 +22,33 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="static/js/jquery-1.9.1.js"></script>
+    <script src="static/js/jquery.min.js"></script>
     <script>
     
-    $(function (){
+    var progress = {{progress}};
     
-	    var progress;
-	    
-	    function callAjax() {
-	            $.ajax({
-	                type: 'GET',
-	                url: '/progress',
-	                data: $(this).serialize(),
-	                dataType: 'json',
-	                success: function (data) {
-	                	progress = data;
-	                }
-	            });
-	            console.log(progress);
-	            return progress;
-	   }
-	   
-	   $(document).ready(function(){
-	   		var pbar = document.getElementById('progress-bar');
-	    	pbar.setAttribute("style","width:".concat(callAjax()));
-	   });
+    function callAjax() {
+            $.ajax({
+                type: 'GET',
+                url: '/progress',
+                data: $(this).serialize(),
+                dataType: 'json',
+                success: function (data) {
+                	progress = data;
+                }
+            });
+   }
+   
+   
+   $(document).ready(function(){
+	window.setInterval(function(){
+		callAjax()
+	  	console.log(progress);
+	   	var pbar = document.getElementById('pbar');
+	   	pbar.setAttribute("style","width:".concat(progress).concat("%"));
+	},1000);
    });
+   
    </script>
     
   </head>
@@ -78,10 +79,10 @@
     </nav>
     
     <div class="progress progress-striped active">
-	  <div id="progress-bar" class="progress-bar" role="progressbar"
+	  <div id="pbar" class="progress-bar" role="progressbar"
 	       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
-	       style="width: 45%">
-	    <span class="sr-only">45% completado</span>
+	       style="width: {{progress}}%">
+	    <span class="sr-only"></span>
 	  </div>
 	</div>
 
