--- a/src/template/index.html
+++ b/src/template/index.html
@@ -70,6 +70,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/reports">Reports</a></li>
+            <li><a href="/rankings">Rankings</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -78,7 +79,7 @@
       </div>
     </nav>
     
-    <div class="progress progress-striped active">
+    <div id="progress-bar" class="progress progress-striped active">
 	  <div id="pbar" class="progress-bar" role="progressbar"
 	       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
 	       style="width: {{progress}}%">
