--- a/src/template/reports.html
+++ b/src/template/reports.html
@@ -70,14 +70,16 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li class="active"><a href="/reports">Reports</a></li>
+            <li><a href="/rankings">Rankings</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
+          <input id="button-logout" name="button-logout" type="button" value="Log Out" onclick="location.href='/logout';" class="btn btn-warning" />
         </div><!--/.nav-collapse -->
       </div>
     </nav>
     
-    <div class="progress progress-striped active">
+    <div id="progress-bar" class="progress progress-striped active">
 	  <div id="pbar" class="progress-bar" role="progressbar"
 	       aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"
 	       style="width: {{progress}}%">
@@ -97,7 +99,7 @@
 		{% endif %}
       </div>
     </div><!-- /.container -->
-    <div class="container" id="reports_container">
+    <div class="container" id="reports_main_container">
     {% for report in reports %}
     	<div id=report">
     		<table id="report_table">
