Arreglado fallo de vista

--- a/src/template/page_view.html
+++ b/src/template/page_view.html
@@ -93,7 +93,7 @@
       </div>
 
     </div><!-- /.container -->
-    <div class="container" id="reports_container">
+    <div class="container" id="reports_main_container">
     {% for line in result.content.splitlines() %}
 		{{line}}<br/>
 	{% endfor %}
