--- a/src/template/report_view.html
+++ b/src/template/report_view.html
@@ -105,6 +105,8 @@
 		<p>Saved at: {{report.time}}</p>
 		<br/><br/>
 		<p>Validation executed by: {{report.user}}</p>
+		
+		<h1 id="rankingPositionNumber">{{report.ranking_position}}</h1>
 	</div>
 	<div id ="errorTableContainer">
 		<button class="buttonTitle" id="errorsTitle"><h3>Common errors</h3></button>
