Algoritmo para calcular la puntuación funcionando sublimemente

--- a/src/template/report_view.html
+++ b/src/template/report_view.html
@@ -106,7 +106,7 @@
 		<br/><br/>
 		<p>Validation executed by: {{report.user}}</p>
 		
-		<h1 id="rankingPositionNumber">{{report.ranking_position}}</h1>
+		<h1 id="rankingPositionNumber">{{report.score}}</h1>
 	</div>
 	<div id ="errorTableContainer">
 		<button class="buttonTitle" id="errorsTitle"><h3>Common errors</h3></button>
