--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -63,12 +63,12 @@ body {
 	margin-bottom: 30px;
 }
 
-#report_table td, #report_table tr{
+#report_table td, #report_table tr, #report_table th{
 	text-align: center;
 	border: 1px solid;
 }
 
-#report_subtable td, #report_subtable tr{
+#report_subtable td, #report_subtable tr, #report_subtable th{
 	margin: auto;
 	width: 700px;
 	padding: 10px;
@@ -156,4 +156,17 @@ body {
 #progress-bar{
 	position: fixed;
 	width: 100%;
+}
+
+#chart{
+	margin-top: 50px;
+}
+
+[data-notify="progressbar"] {
+	margin-bottom: 0px;
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	width: 100%;
+	height: 5px;
 }
