--- a/src/template/index.html
+++ b/src/template/index.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/animate.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="static/css/main.css" rel="stylesheet">
@@ -23,7 +24,16 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="static/js/jquery.min.js"></script>
+    <!-- Notifications system -->
+    <script src="static/js/bootstrap.js"></script>
+    <script src="static/js/bootstrap-notify.js"></script>
+    
     <script>
+    
+    $.notifyDefaults({
+		type: 'success',
+		allow_dismiss: false
+	});
     
     var progress = {{progress}};
     
@@ -47,13 +57,32 @@
 	   	var pbar = document.getElementById('pbar');
 	   	pbar.setAttribute("style","width:".concat(progress).concat("%"));
 	},1000);
+	
    });
+   
+   var notify = $.notify("Enter: Fade In and RightExit: Fade Out and Right", {
+		animate: {
+			enter: 'animated fadeInRight',
+			exit: 'animated fadeOutRight'
+		}
+	});
    
    </script>
     
   </head>
 
   <body>
+  
+  <div data-notify="container" class="col-xs-11 col-sm-3 alert alert-{0}" role="alert">
+	<button type="button" aria-hidden="true" class="close" data-notify="dismiss">×</button>
+	<span data-notify="icon"></span>
+	<span data-notify="title">{1}</span>
+	<span data-notify="message">{2}</span>
+	<div class="progress" data-notify="progressbar">
+		<div class="progress-bar progress-bar-{0}" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
+	</div>
+	<a href="{3}" target="{4}" data-notify="url"></a>
+   </div>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
