--- a/src/template/rankings.html
+++ b/src/template/rankings.html
@@ -23,6 +23,12 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="static/js/jquery.min.js"></script>
+    
+    <!--Highcharts-->
+    <script src="http://code.highcharts.com/highcharts.js"></script>
+	<script src="http://code.highcharts.com/highcharts-3d.js"></script>
+	<script src="http://code.highcharts.com/modules/exporting.js"></script>
+    
     <script>
     
     var progress = {{progress}};
@@ -47,7 +53,89 @@
 	   	var pbar = document.getElementById('pbar');
 	   	pbar.setAttribute("style","width:".concat(progress).concat("%"));
 	},1000);
+	
+	function load() {
+   	console.log("entramos");
+	// Set up the chart
+	var chart = new Highcharts.Chart({
+		chart: {
+			renderTo: 'chart',
+			type: 'column',
+			margin: 75,
+			options3d: {
+				enabled: true,
+				alpha: 15,
+				beta: 15,
+				depth: 50,
+				viewDistance: 25
+			}
+		},
+		title: {
+			text: 'Ranking HTML/XHTML/CSS'
+		},
+		subtitle: {
+			text: ''
+		},
+		
+		xAxis: {
+			title: {
+				text: 'Web page'
+			},
+			categories: [
+			{% for i in webs %}
+				"{{i}}",
+			{% endfor %}
+			]
+		},
+		
+		yAxis: {
+			allowDecimals: false,
+			min: 0,
+			title: {
+				text: 'Score'
+			}
+		},
+		
+		plotOptions: {
+			column: {
+				depth: 25
+			}
+		},
+		series: [{
+			name: 'Score',
+			data: [
+			{% for i in scores %}
+				{{i}},
+			{% endfor %}
+			]
+		}]
+	});
+
+			function showValues() {
+				$('#R0-value').html(chart.options.chart.options3d.alpha);
+				$('#R1-value').html(chart.options.chart.options3d.beta);
+			}
+
+			// Activate the sliders
+			$('#R0').on('change', function () {
+				chart.options.chart.options3d.alpha = this.value;
+				showValues();
+				chart.redraw(false);
+			});
+			$('#R1').on('change', function () {
+				chart.options.chart.options3d.beta = this.value;
+				showValues();
+				chart.redraw(false);
+			});
+
+			showValues();
+		};
+		
+		load();
+	
    });
+   
+   
    
    </script>
     
@@ -88,9 +176,13 @@
 	</div>
 
     <div class="container">
-		
-		
-
+		<div id="chart"></div>
+		<div id="sliders">
+			<table>
+				<tr><td>Alpha Angle</td><td><input id="R0" type="range" min="0" max="45" value="15"/> <span id="R0-value" class="value"></span></td></tr>
+				<tr><td>Beta Angle</td><td><input id="R1" type="range" min="0" max="45" value="15"/> <span id="R1-value" class="value"></span></td></tr>
+			</table>
+		</div>
     </div><!-- /.container -->
 
     <!-- Bootstrap core JavaScript
