Empezando a añadir test para moviles de Google

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -88,6 +88,9 @@
 		  <label class="radio-inline">
 		  	<input value="CHECK AVAILABILITY" type="radio" name="optradio">Check availability
 		  </label>
+		  <label class="radio-inline">
+		  	<input value="MOBILE" type="radio" name="optradio">Google Mobile Check
+		  </label>
 		  <br/><br/>
 		  <div class="form-group">
 		    <label for="depth">Depth level</label>
