--- a/src/template/test.html
+++ b/src/template/test.html
@@ -25,6 +25,45 @@
   </head>
 
   <body>
+  
+  <div id="usability">
+	  <h1>USABILITY</h1>
+	  <table>
+		  	<tr>
+		  		<th>Score</th>
+		  		<td>{{scoreUsability}}</td>
+		  	</tr>
+	  	</table>
+	  	{% for i in range(types|length) %}
+	  		{% if types[i] == 'USABILITY' %}
+	  		<table>
+			  	<tr>
+			  		<th>Rule name</th>
+			  		<td>{{ruleNames[i]}}</td>
+			  	</tr>
+			  	<tr>
+			  		<th>Rule impact</th>
+			  		<td>{{ruleImpacts[i]}}</td>
+			  	</tr>
+			  	<tr>
+			  		<th>Summary</th>
+			  		<td>{{summaries[i]}}</td>
+			  	</tr>
+			  	<tr>
+			  		<th>UrlBlocks</th>
+			  		{% for block in urlBlocks %}
+			  			<th>HEADERS</th>
+			  			{% for header in block['urlBlockHeaders'] %}
+			  				<td>{{header}}</td>
+			  			{% endfor %}
+			  		{% endfor %}
+			  	</tr>
+			</table>
+			{% endif %}
+	  	{% endfor %}
+	  		
+  </div>
+  
 	    <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -32,121 +71,6 @@
     <script src="static/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="static/js/ie10-viewport-bug-workaround.js"></script>
-    
-    HOLA MUNDO
-    
-    <script>
-	// Specify your actual API key here:
-	var API_KEY = 'AIzaSyDmU2XjCiUJdMyDDhX8AQ8n-4vye8i5Uzk';
-	
-	// Specify the URL you want PageSpeed results for here:
-	var URL_TO_GET_RESULTS_FOR = 'http://www.ugr.es/';
-	</script>
-	
-	<script>
-	var API_URL = 'https://www.googleapis.com/pagespeedonline/v2/runPagespeed?';
-	var CHART_API_URL = 'http://chart.apis.google.com/chart?';
-	
-	// Object that will hold the callbacks that process results from the
-	// PageSpeed Insights API.
-	var callbacks = {}
-	
-	// Invokes the PageSpeed Insights API. The response will contain
-	// JavaScript that invokes our callback with the PageSpeed results.
-	function runPagespeed() {
-	  var s = document.createElement('script');
-	  s.type = 'text/javascript';
-	  s.async = true;
-	  var query = [
-	    'url=' + URL_TO_GET_RESULTS_FOR,
-	    'callback=runPagespeedCallbacks',
-	    'key=' + API_KEY,
-	  ].join('&');
-	  s.src = API_URL + query;
-	  document.head.insertBefore(s, null);
-	}
-	
-	// Our JSONP callback. Checks for errors, then invokes our callback handlers.
-	function runPagespeedCallbacks(result) {
-	  if (result.error) {
-	    var errors = result.error.errors;
-	    for (var i = 0, len = errors.length; i < len; ++i) {
-	      if (errors[i].reason == 'badRequest' && API_KEY == 'yourAPIKey') {
-	        alert('Please specify your Google API key in the API_KEY variable.');
-	      } else {
-	        // NOTE: your real production app should use a better
-	        // mechanism than alert() to communicate the error to the user.
-	        alert(errors[i].message);
-	      }
-	    }
-	    return;
-	  }
-	
-	  // Dispatch to each function on the callbacks object.
-	  for (var fn in callbacks) {
-	    var f = callbacks[fn];
-	    if (typeof f == 'function') {
-	      callbacks[fn](result);
-	    }
-	  }
-	}
-	
-	// Invoke the callback that fetches results. Async here so we're sure
-	// to discover any callbacks registered below, but this can be
-	// synchronous in your code.
-	setTimeout(runPagespeed, 0);
-	</script>
-	
-	<script>
-		callbacks.displayPageSpeedScore = function(result) {
-		  var score = result.ruleGroups.SPEED.score;
-		  // Construct the query to send to the Google Chart Tools.
-		  var query = [
-		    'chtt=Page+Speed+score:+' + score,
-		    'chs=180x100',
-		    'cht=gom',
-		    'chd=t:' + score,
-		    'chxt=x,y',
-		    'chxl=0:|' + score,
-		  ].join('&');
-		  var i = document.createElement('img');
-		  i.src = CHART_API_URL + query;
-		  document.body.insertBefore(i, null);
-		  console.log(result);
-		};
-</script>
-
-<script>
-callbacks.displayTopPageSpeedSuggestions = function(result) {
-  var results = [];
-  var ruleResults = result.formattedResults.ruleResults;
-  for (var i in ruleResults) {
-    var ruleResult = ruleResults[i];
-    // Don't display lower-impact suggestions.
-    if (ruleResult.ruleImpact < 3.0) continue;
-    results.push({name: ruleResult.localizedRuleName,
-                  impact: ruleResult.ruleImpact});
-  }
-  results.sort(sortByImpact);
-  var ul = document.createElement('ul');
-  for (var i = 0, len = results.length; i < len; ++i) {
-    var r = document.createElement('li');
-    r.innerHTML = results[i].name;
-    ul.insertBefore(r, null);
-  }
-  if (ul.hasChildNodes()) {
-    document.body.insertBefore(ul, null);
-  } else {
-    var div = document.createElement('div');
-    div.innerHTML = 'No high impact suggestions. Good job!';
-    document.body.insertBefore(div, null);
-  }
-};
-
-// Helper function that sorts results in order of impact.
-function sortByImpact(a, b) { return b.impact - a.impact; }
-</script>
-
     
   </body>
 </html>
